Fix margin for quality items to remove bottom spacing on last child

--- a/src/css/quality.css
+++ b/src/css/quality.css
@@ -64,4 +64,7 @@
   .quality-item {
     flex: 1;
   }
+  .quality-item:not(:last-child) {
+    margin-bottom: 0;
+  }
 }
